2006-03-23  Marc Singer  <elf@buici.com>

	* src/apex/cmd-version.c (cmd_version): Fixed the presentation of
	the apex region for the case when the length is greater than four
	hex digits.

	* src/apex/console.c (read_command): Configuration option allows
	DEL to be interpreted as BS.

	* Makefile: 1.3.21

	* usr/printenv.cc (main): Application that reads APEX environment
	from user-land.

	* src/apex/env.c: added environment link support so that user-land
	applications can read the APEX environment.

2006-03-22  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-clcdc.c (VSW): Fixed error in the VSW macro.

	* src/drivers/drv-ext2.c (ext2_find_inode): Fixed the computation
	of the first block where the group descriptors are found.  This
	allows APEX to read cards with block sizes other than 1K.

2006-03-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/freq: Perl script that aids in finding clock
	frequency dividers.

	* src/mach-lh7a40x/Kconfig: Added more overclocking frequencies to
	the lh7a40x configuration.

	* Brought Kconfig sources up to date.

2006-03-15  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.20

	* src/mach-lh7a40x/initialize.c: Adjusted the SMC controller
	timing setup to be sensitive to HCLK as configured.

	* src/mach-lh7a40x/lh7a40x.h: Kconfig selectable operating
	frequencies.

	* Adding support for new architecture, s3c2410, and new machine
	m7200.

2006-03-02  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.19

	* src/mach-lh7952x/lh79524.h (RCPC_CPUCLKPRE_V): Added support for
	faster clocking of the LH79524.  It isn't, yet, compatible with
	the Linux kernel.  However, this may help someone who is looking
	for a little more speed.

	* src/mach-lh7a40x/initialize.c (target_init): Added support for
	the LPD7A404-10, PN 80000258, USB_PWR_EN.  The sense of this line
	changed between the -10 and the -11 releases of the LPD7A404
	CardEngine.

2006-02-23  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.18
