@@ -5,7 +5,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 
 VERSION = 1
 PATCHLEVEL = 3
-SUBLEVEL = 21
+SUBLEVEL = 22
 EXTRAVERSION =
 #NAME=Zonked Quokka
 
