@@ -58,7 +58,7 @@ int cmd_version (int argc, const char** argv)
   snprintf (sz, sizeof (sz), "mem:0x%p+0x%lx",
 	    (void*) &APEX_VMA_COPY_START,
 	    (unsigned long )(&APEX_VMA_COPY_END - &APEX_VMA_COPY_START));
-  printf ("  apex => %s-21.21s   (%ld bytes)\n",
+  printf ("  apex => %-21.21s   (%ld bytes)\n",
 	  sz, (unsigned long )(&APEX_VMA_COPY_END - &APEX_VMA_COPY_START));
 #if defined (CONFIG_CMD_SETENV)
   printf ("  env  => %-21.21s   (", CONFIG_ENV_REGION);
